Fixed colectPrompt alignment

--- a/src/app/feed/post/post.component.css
+++ b/src/app/feed/post/post.component.css
@@ -384,7 +384,7 @@ li {
   border-radius: 5px;
   background: #E2B33D;
   margin-top: 6px;
-  margin-bottom: 6px;
+  margin-bottom: 8px;
   float: right;
   margin-right: 14px;
   display: grid;
